Ya tenemos hora de salida.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <section id="claveOpContenedor">
         Clave: <span id="claveLabel"></span>
         <br />
+        Hora objetivo: <input id="horasObjetivoInput" type="text" />:
+        <br />
+        <button id="modificarClaveBtn">Modificar</button>
         <button id="eliminarClaveBtn">Eliminar</button>
         <button id="cancelarClaveBtn">Cancelar</button>
     </section>
@@ -53,7 +56,7 @@
     <footer>
         <span>Autor: Daniel Martínez Cequiel 2016</span>
         <br />
-        <span>Version: 0.2 beta</span>
+        <span>Version: 0.1.3 beta</span>
         <span id="infoLabel"></span>
     </footer>
 </body>
